# MQTT_-NOW

./: CMakeLists.txt  README.md  sdkconfig
components/Azure_IoT/: Azure_IoT.c  CMakeLists.txt
components/Azure_IoT/include/: Azure_IoT.h
components/Azure_IoT_PnP_Template/: Azure_IoT_PnP_Template.c  CMakeLists.txt
components/Azure_IoT_PnP_Template/include/: Azure_IoT_PnP_Template.h
components/_az_cfg/: CMakeLists.txt  _az_cfg.c
components/_az_cfg_prefix/: CMakeLists.txt  _az_cfg_prefix.c
components/_az_cfg_suffix/: CMakeLists.txt  _az_cfg_suffix.c
components/az_base64/: CMakeLists.txt  az_base64.c
components/az_config/: CMakeLists.txt  az_config.c
components/az_config_internal/: CMakeLists.txt  az_config_internal.c
components/az_context/: CMakeLists.txt  az_context.c
components/az_core/: CMakeLists.txt  az_core.c
components/az_credentials/: CMakeLists.txt  az_credentials.c
components/az_credentials_internal/: CMakeLists.txt  az_credentials_internal.c
components/az_hex_private/: CMakeLists.txt  az_hex_private.c
components/az_http/: CMakeLists.txt  az_http.c
components/az_http_header_validation_private/: CMakeLists.txt  az_http_header_validation_private.c
components/az_http_internal/: CMakeLists.txt  az_http_internal.c
components/az_http_pipeline/: CMakeLists.txt  az_http_pipeline.c
components/az_http_policy/: CMakeLists.txt  az_http_policy.c
components/az_http_policy_logging/: CMakeLists.txt  az_http_policy_logging.c
components/az_http_policy_logging_private/: CMakeLists.txt  az_http_policy_logging_private.c
components/az_http_policy_retry/: CMakeLists.txt  az_http_policy_retry.c
components/az_http_private/: CMakeLists.txt  az_http_private.c
components/az_http_request/: CMakeLists.txt  az_http_request.c
components/az_http_response/: CMakeLists.txt  az_http_response.c
components/az_http_transport/: CMakeLists.txt  az_http_transport.c
components/az_iot/: CMakeLists.txt  az_iot.c
components/az_iot_adu_client/: CMakeLists.txt  az_iot_adu_client.c
components/az_iot_adu_internal/: CMakeLists.txt  az_iot_adu_internal.c
components/az_iot_common/: CMakeLists.txt  az_iot_common.c
components/az_iot_common_internal/: CMakeLists.txt  az_iot_common_internal.c
components/az_iot_hub_client/: CMakeLists.txt  az_iot_hub_client.c
components/az_iot_hub_client_c2d/: CMakeLists.txt  az_iot_hub_client_c2d.c
components/az_iot_hub_client_commands/: CMakeLists.txt  az_iot_hub_client_commands.c
components/az_iot_hub_client_methods/: CMakeLists.txt  az_iot_hub_client_methods.c
components/az_iot_hub_client_properties/: CMakeLists.txt  az_iot_hub_client_properties.c
components/az_iot_hub_client_sas/: CMakeLists.txt  az_iot_hub_client_sas.c
components/az_iot_hub_client_telemetry/: CMakeLists.txt  az_iot_hub_client_telemetry.c
components/az_iot_hub_client_twin/: CMakeLists.txt  az_iot_hub_client_twin.c
components/az_iot_provisioning_client/: CMakeLists.txt  az_iot_provisioning_client.c
components/az_iot_provisioning_client/include/: az_iot_provisioning_client.h
components/az_iot_provisioning_client_sas/: CMakeLists.txt  az_iot_provisioning_client_sas.c
components/az_json/: CMakeLists.txt  az_json.c
components/az_json/include/: az_json.h
components/az_json_private/: CMakeLists.txt  az_json_private.c
components/az_json_reader/: CMakeLists.txt  az_json_reader.c
components/az_json_token/: CMakeLists.txt  az_json_token.c
components/az_json_writer/: CMakeLists.txt  az_json_writer.c
components/az_log/: CMakeLists.txt  az_log.c
components/az_log_internal/: CMakeLists.txt  az_log_internal.c
components/az_log_internal/include/: az_log_internal.h
components/az_nohttp/: CMakeLists.txt  az_nohttp.c
components/az_noplatform/: CMakeLists.txt  az_noplatform.c
components/az_platform/: CMakeLists.txt  az_platform.c
components/az_precondition/: CMakeLists.txt  az_precondition.c
components/az_precondition_internal/: CMakeLists.txt  az_precondition_internal.c
components/az_precondition_internal/include/: az_precondition_internal.h
components/az_result/: CMakeLists.txt  az_result.c
components/az_result_internal/: CMakeLists.txt  az_result_internal.c
components/az_retry_internal/: CMakeLists.txt  az_retry_internal.c
components/az_span/: CMakeLists.txt  az_span.c
components/az_span/include/: az_span.h
components/az_span_internal/: CMakeLists.txt  az_span_internal.c
components/az_span_private/: CMakeLists.txt  az_span_private.c
components/az_version/: CMakeLists.txt  az_version.c
components/azure_ca/: CMakeLists.txt  azure_ca.c
components/iot_configs/: CMakeLists.txt  iot_configs.c
components/iot_configs/include/: iot_configs.h
main/: app_main.c
