idf_component_register(SRCS "az_core.c"
                    INCLUDE_DIRS "include"
                    REQUIRES "az_base64"
                    REQUIRES "az_config"
                    REQUIRES "az_context"
                    REQUIRES "az_credentials"
                    REQUIRES "az_http"
                    REQUIRES "az_http_transport"
                    REQUIRES "az_json"
                    REQUIRES "az_log"
                    REQUIRES "az_platform"
                    REQUIRES "az_precondition"
                    REQUIRES "az_result"
                    REQUIRES "az_span"
                    REQUIRES "az_version" )
