idf_component_register(SRCS "az_http_policy_retry.c"
                    INCLUDE_DIRS "include"
                    REQUIRES "az_http_private"
                    REQUIRES "az_config"
                    REQUIRES "az_platform"
                    REQUIRES "az_config_internal"
                    REQUIRES "az_http_internal"
                    REQUIRES "az_log_internal"
                    REQUIRES "az_result_internal"
                    REQUIRES "az_retry_internal"
                    REQUIRES "az_span_internal"
                    REQUIRES "_az_cfg")
