idf_component_register(SRCS "az_http_request.c"
                    INCLUDE_DIRS "include"
                    REQUIRES "az_http_header_validation_private"
                    REQUIRES "az_http_private"
                    REQUIRES "az_span_private"
                    REQUIRES "az_http"
                    REQUIRES "az_http_transport"
                    REQUIRES "az_precondition"
                    REQUIRES "az_http_internal"
                    REQUIRES "az_precondition_internal"
                    REQUIRES "az_result_internal"
                    REQUIRES "az_span_internal"
                    REQUIRES "_az_cfg")
