idf_component_register(SRCS "az_iot_adu_client.c"
                    INCLUDE_DIRS "include"
                    REQUIRES "az_json"
                    REQUIRES "az_result"
                    REQUIRES  "az_span"
                    REQUIRES "az_iot_hub_client"
                    REQUIRES "az_iot_adu_internal"
                    REQUIRES "az_iot_adu_client"
                    REQUIRES "az_iot_hub_client_properties"
                    REQUIRES "az_log_internal"
                    REQUIRES "az_result_internal"
                    REQUIRES "_az_cfg_prefix")
