idf_component_register(SRCS "az_iot_provisioning_client.c"
                    INCLUDE_DIRS "include"
                    REQUIRES "az_result"
                    REQUIRES "az_span"
                    REQUIRES "az_iot_common"
                    REQUIRES "az_json"
                    REQUIRES "az_log_internal"
                    REQUIRES "az_precondition_internal"
                    REQUIRES "az_span_internal"
                    REQUIRES "_az_cfg"
                    REQUIRES "_az_cfg_prefix")
