idf_component_register(SRCS "az_span.c"
                    INCLUDE_DIRS "include"
                    REQUIRES "az_result"
                    REQUIRES "az_hex_private"
                    REQUIRES "az_span_private"
                    REQUIRES "az_precondition"
                    REQUIRES "az_span_internal"
                    REQUIRES "az_result_internal")
