idf_component_register(SRCS "az_span_private.c"
                    INCLUDE_DIRS "include"
                    REQUIRES "az_precondition"
                    REQUIRES "az_result"
                    REQUIRES "az_precondition_internal"
                    REQUIRES "az_span"
                    REQUIRES "_az_cfg_prefix")
